Fully absorbed queue into containers project

--- a/src/containers/CMakeLists.txt
+++ b/src/containers/CMakeLists.txt
@@ -1,12 +1,9 @@
 cmake_minimum_required(VERSION 3.18)
-project(pglx-10-shared C)
+project(c_containers C)
 
 set(CMAKE_C_STANDARD 11)
 
 include(../utils.cmake)
-
-# Gets queuing
-add_subdirectory_lazy(../pglx-8 pglx-8::lib)
 
 # See pglx-8 for ESP_PLATFORM info
 if(NOT ESP_PLATFORM)
@@ -18,13 +15,18 @@ if(NOT ESP_PLATFORM)
     #find_package(logger REQUIRED)
     # pthreads needs this [6] - also according to [6] clang can do this with a -pthreads compiler option
     find_package(Threads REQUIRED)
+else()
+    message(DEBUG "Compiling for esp-idf")
 endif()
 
 set(SOURCE
-        array.h bind.h
+        array.h
+        bind.h
+        queue.h
         threadpool.h
         array.c
         bind.c
+        queue.c
         string.c
         threadpool.c
         )
@@ -39,6 +41,9 @@ target_include_directories(${PROJECT_NAME}_shared PUBLIC .)
 
 if(NOT ESP_PLATFORM)
     message(DEBUG "Desktop")
+    # Almost works, just doesn't like include_next
+    #target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Werror -Wextra -pedantic)
+
     target_link_libraries(${PROJECT_NAME}_shared Threads::Threads logger)
     target_link_libraries(${PROJECT_NAME} Threads::Threads logger_static)
 else()
@@ -47,7 +52,7 @@ else()
     target_include_directories(${PROJECT_NAME}_shared PUBLIC esp-idf)
 endif()
 
-target_link_libraries(${PROJECT_NAME} malachi-iot::queue)
-target_link_libraries(${PROJECT_NAME}_shared malachi-iot::queue)
+#target_link_libraries(${PROJECT_NAME} malachi-iot::queue)
+#target_link_libraries(${PROJECT_NAME}_shared malachi-iot::queue)
 
 
