--- a/examples/esp-idf/test/main/CMakeLists.txt
+++ b/examples/esp-idf/test/main/CMakeLists.txt
@@ -4,9 +4,9 @@ idf_component_register(SRCS "test.c" "wifi.c"
 # Guidance from
 # https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-guides/build-system.html#using-esp-idf-in-custom-cmake-projects
 
-SET(HTTP_SRC_FOLDER ../../../src)
+SET(HTTP_SRC_FOLDER ../../../../src)
 add_subdirectory(${HTTP_SRC_FOLDER}/http http)
-add_subdirectory_lazy(${HTTP_SRC_FOLDER}/pipeline malachi-iot::http-fileserver)
+add_subdirectory_lazy(${HTTP_SRC_FOLDER}/fileserver malachi-iot::http-fileserver)
 
-# Nearly there, but has issues with shared vs static linking
+# DEBT: Works, but has issues with shared vs static linking
 target_link_libraries(${COMPONENT_LIB} malachi-iot::c_containers malachi-iot::http-server malachi-iot::http-fileserver)
